...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Map" id="Iyf-7j-ZuW">
                        <barButtonItem key="rightBarButtonItem" image="Near Me" id="VrP-m1-rjM">
                            <connections>
                                <action selector="showNearbyParks:" destination="NR9-Zr-aWf" id="Ox4-rf-s5l"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Search by park name" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dNL-bD-yJ9">
                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                <color key="barTintColor" red="0.396078431372549" green="0.69411764705882351" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <segments>
                                                <segment title="All"/>
                                                <segment title="Playground"/>
                                                <segment title="Restrooms"/>
                                            </segments>
                                            <color key="tintColor" red="0.396078431372549" green="0.69411764705882351" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Like Filled" translatesAutoresizingMaskIntoConstraints="NO" id="Ibs-ep-oEt">
                                                    <rect key="frame" x="254" y="9" width="25" height="25"/>
                                                    <constraints>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="List" id="j7X-10-xvT"/>
                    <connections>
                        <outlet property="searchBar" destination="dNL-bD-yJ9" id="mGh-rg-r9v"/>
...
                                                            <autoresizingMask key="autoresizingMask"/>
                                                            <subviews>
                                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="Ufh-gH-tJy">
                                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                                                    <constraints>
...
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nxj-VH-HDk">
                                                <rect key="frame" x="275" y="20" width="25" height="25"/>
                                                <state key="normal" image="Like"/>
                                                <connections>
                                                    <action selector="toggleFavorite:" destination="72v-US-hjw" eventType="touchUpInside" id="XXd-Ko-c3n"/>
...
