...
    func getAmenities() -> [[String: String?]] {
        let amenities = [
            ["Status": status],
            ["Days Open": daysOpen],
            ["Hours": hours],
            ["Park Type": parkType],
            ["Restrooms": hasRestrooms == true ? "Yes" : "No"],
            ["Play Equipment": hasPlayEquip == true ? "Yes" : "No"],
            ["Picnic Tables": hasPicnicTables == true ? "Yes" : "No"],
            ["Picnic Shelter": hasPicnicShelter == true ? "Yes" : "No"],
            ["Ballfields": hasBallfields == true ? "Yes" : "No"],
            ["Soccer": hasSoccer == true ? "Yes" : "No"],
            ["Jogging": hasJogging == true ? "Yes" : "No"],
...
            ["Horseshoes": hasHorseshoes == true ? "Yes" : "No"],
            ["Spray Pad": hasSprayPad == true ? "Yes" : "No"],
            ["Stage": hasStage == true ? "Yes" : "No"],
            ["Community Gardens": hasGardens == true ? "Yes" : "No"],
            ["Basketball": hasBasketball == true ? "Yes" : "No"],
            ["Skate": hasSkate == true ? "Yes" : "No"],
            ["Reservable": isReservable == true ? "Yes" : "No"]
        ]

        return amenities
    }
    

...
